// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Text as paragraph tag 1`] = `
@media print {

}

@media print {

}

@media print {

}

<p
  class=""
>
  paragraph
</p>
`;

exports[`renders Text vote icon 1`] = `
.c0::before {
  display: inline-block;
  margin-top: -0.3em;
  margin-right: 0.25em;
  background: #028099;
  width: 1em;
  height: 1em;
  vertical-align: middle;
  text-align: center;
  line-height: 1.1;
  color: #fff;
  font-size: 90%;
  font-weight: 800;
  content: '✓';
}

@media print {

}

@media print {

}

@media print {

}

<p
  class="c0"
>
  vote!
</p>
`;

exports[`renders Text warning icon 1`] = `
.c0::before {
  display: inline-block;
  margin-top: -0.3em;
  margin-right: 0.25em;
  border-radius: 50%;
  background: darkorange;
  width: 1em;
  height: 1em;
  vertical-align: middle;
  text-align: center;
  line-height: 1.1;
  color: #fff;
  font-size: 90%;
  font-weight: 800;
  content: '!';
}

@media print {

}

@media print {

}

@media print {

}

<p
  class="c0"
>
  Warning
</p>
`;
